--- a/eyepetizer_home/src/main/res/layout/fragment_home.xml
+++ b/eyepetizer_home/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:banner="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,15 +10,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/test_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="homeFragment"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <com.youth.banner.Banner
+            android:id="@+id/home_fragment_content_banner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            banner:banner_auto_loop="false"
+            banner:banner_infinite_loop="false" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
