--- a/eyepetizer_home/src/main/res/layout/activity_home.xml
+++ b/eyepetizer_home/src/main/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
         <FrameLayout
             android:id="@+id/home_fragment"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
